# dice

./: Makefile  README.md  pyproject.toml
src/dice/: entrypoint.py  main.py
