[project]
name = "dice"
version = "0.1.0"
description = "An electronic dice using GPIO of the Raspberry Pi."
authors = [
    {name = "Summer Salad", email = "summer.salad.games@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "dice", from = "src" }
]
requires-python = ">=3.11"
dependencies = [
    "gpiozero (>=2.0.1,<3.0.0)",
    "lgpio (>=0.2.2.0,<0.3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
